// protoc --proto_path=. --micro_out=. --go_out=. *.proto

syntax = "proto3";

package inner;

message groupReq {
  int64 userId = 1;
  int32 loginType = 2;
  int32 roleType = 3;
  int64 groupId = 4;
  int32 command = 5;
  bytes content = 6;
  int32 retry = 7;
}

message groupRsp {
  int64 userId = 1;
  int32 loginType = 2;
  int32 roleType = 3;
  int64 groupId = 4;
  int32 command = 5;
  bytes content = 6;
  int32 svcErr = 7;
}

service ImGroup{
  rpc Group(groupReq) returns (groupRsp);
}